software/arm_ros2_ws/log/build_2026-06-20_00-07-59/stm32_bridge/stdout_stderr.log
/usr/local/lib/python3.8/dist-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
running egg_info
writing ../../build/stm32_bridge/stm32_bridge.egg-info/PKG-INFO
writing dependency_links to ../../build/stm32_bridge/stm32_bridge.egg-info/dependency_links.txt
writing entry points to ../../build/stm32_bridge/stm32_bridge.egg-info/entry_points.txt
writing requirements to ../../build/stm32_bridge/stm32_bridge.egg-info/requires.txt
writing top-level names to ../../build/stm32_bridge/stm32_bridge.egg-info/top_level.txt
reading manifest file '../../build/stm32_bridge/stm32_bridge.egg-info/SOURCES.txt'
writing manifest file '../../build/stm32_bridge/stm32_bridge.egg-info/SOURCES.txt'
running build
running build_py
copying stm32_bridge/stm32_interface_node.py -> /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/build/stm32_bridge/build/lib/stm32_bridge
copying stm32_bridge/protocol.py -> /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/build/stm32_bridge/build/lib/stm32_bridge
running install
running install_lib
copying /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/build/stm32_bridge/build/lib/stm32_bridge/stm32_interface_node.py -> /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/install/stm32_bridge/lib/python3.8/site-packages/stm32_bridge
copying /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/build/stm32_bridge/build/lib/stm32_bridge/protocol.py -> /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/install/stm32_bridge/lib/python3.8/site-packages/stm32_bridge
byte-compiling /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/install/stm32_bridge/lib/python3.8/site-packages/stm32_bridge/stm32_interface_node.py to stm32_interface_node.cpython-38.pyc
  File "/home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/install/stm32_bridge/lib/python3.8/site-packages/stm32_bridge/stm32_interface_node.py", line 25
    if(packet = -1):
              ^
SyntaxError: invalid syntax

byte-compiling /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/install/stm32_bridge/lib/python3.8/site-packages/stm32_bridge/protocol.py to protocol.cpython-38.pyc
running install_data
running install_egg_info
removing '/home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/install/stm32_bridge/lib/python3.8/site-packages/stm32_bridge-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/stm32_bridge/stm32_bridge.egg-info to /home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/install/stm32_bridge/lib/python3.8/site-packages/stm32_bridge-0.0.0-py3.8.egg-info
running install_scripts
writing list of installed files to '/home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/build/stm32_bridge/install.log'
